Summary of important user-visible changes for releases of the octcdf package

===============================================================================
octcdf-1.1.8   Release Date: 2015-03-10   Release Manager: Alexander Barth
===============================================================================

 ** Add depreciation info. Please use the netcdf package instead (possibly in
    combination with ncarray).
 ** Fix for compiling with octave 4.0.0-rc1

===============================================================================
octcdf-1.1.7   Release Date: 2014-02-17   Release Manager: Alexander Barth
===============================================================================

 ** Remove ncinfo, ncread and ncwrite which are now fully implemented in the 
    package netcdf.

===============================================================================
octcdf-1.1.6   Release Date: 2013-04-30   Release Manager: Alexander Barth
===============================================================================

 ** Improved matlab compatibility and bug fixes of ncread, ncinfo

===============================================================================
octcdf-1.1.5   Release Date: 2012-07-03   Release Manager: Alexander Barth
===============================================================================

 ** The following functions are new:
      ncread
      ncwrite
      ncinfo