@@ -53,8 +53,9 @@ OCTAVE = @OCTAVE@
 OCTAVE_VERSION = @OCTAVE_VERSION@
 MKOCTFILE = @MKOCTFILE@ -DHAVE_OCTAVE_$(ver) -v
 SHLEXT = @SHLEXT@
+NC_CONFIG = @NC_CONFIG@
+OCTAVE_CONFIG = @OCTAVE_CONFIG@
 
-HAVE_NETCDF=@HAVE_NETCDF@
 OCTCDF_LIBS=@OCTCDF_LIBS@
 OCTCDF_CFLAGS=@OCTCDF_CFLAGS@
 
